--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
